# rpi-pico-autocorrect

./: .gitignore  Cargo.toml  build.rs  word_list.txt
.github/workflows/: ci_checks.yml
client/: Cargo.toml
client/src/: main.rs  write.rs
host/: Cargo.toml
host/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: device.rs  main.rs  write.rs
