[package]
edition = "2021"
name = "host"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", features = [
  "task-arena-size-98304",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
cortex-m = { version = "0.7", feature = "critical-section-single-core" }
cortex-m-rt = "0.7"
embedded-alloc = { version = "0.5.1", feature = "llff" }
critical-section = { version = "1.0.0" }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-rp = { version = "0.1.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = "0.3.1"
usbd-hid = "0.7.0"
embassy-futures = "0.1.1"
keycode = "0.4.0"
serde = { version = "1.0.203", default-features = false }
postcard = { version = "1.0.0", features = ["alloc"] }

shared = { path = "../shared" }
